Style QR scanner buttons-wrap even when scanning is not active to avoid a FOUC

--- a/client/styl/qr.styl
+++ b/client/styl/qr.styl
@@ -17,7 +17,7 @@ video.qr-video
   body.qr-scanning &
     display block
 
-body.qr-scanning .qr-scanner
+.qr-scanner
   .indicator
     position absolute
     width 200px
@@ -25,6 +25,11 @@ body.qr-scanning .qr-scanner
     top 10%
     left 50%
     margin-left -100px
+
+    display none
+
+    body.qr-scanning &
+      display block
 
     // todo: replace with height-based query (here and below)
     @media screen and (max-height: 540px)
